# android-ocr

./: ICCS_2017_paper_265_traducao.txt  kernelLoco.cl  kernelWithCrossing.cl
OCR/OCRIdentification/: FeatureExtraction.cpp  FeatureExtraction.h  ImageMatrix.cpp  ImageMatrix.h  main.cpp  out.txt
OCR/OCRIdentification/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
OCR/OCRIdentification/nbproject/private/: private.xml
app/: build.gradle
app/src/main/assets/: teste.xcf
app/src/main/assets/coach/: data.txt  dataold.txt
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  br_edu_ufsj_dcomp_ocr_Controller.cpp  br_edu_ufsj_dcomp_ocr_Controller.h  br_edu_ufsj_dcomp_ocr_Controller_old.cpp
app/src/main/jni/ParallelME/runtime/include/parallelme/: Buffer.hpp
app/src/main/jni/ParallelME/runtime/src/parallelme/: Runtime.cpp  SchedulerFCFS.cpp  Task.cpp  Worker.hpp
app/src/main/jni/ParallelME/runtime/src/parallelme/dynloader/: dynLoader.c
app/src/main/jni/ParallelOCR/: Android.mk
app/src/main/jni/ParallelOCR/include/parallelocr/: Coach.hpp  Image.hpp  Letter.hpp  ParallelOCR.hpp  Pixel.hpp  Player.hpp  RGB.hpp
app/src/main/jni/ParallelOCR/src/parallelocr/: Coach.cpp  Image.cpp  Letter.cpp  Pixel.cpp  RGB.cpp
app/src/main/jni/ParallelUS/runtime/: Android.mk  README.md
app/src/main/jni/ParallelUS/runtime/include/parallelus/: Device.hpp  NetworkManager.hpp  ParallelUS.hpp  Program.hpp  Runtime.hpp  Scheduler.hpp  SchedulerHEFT.hpp  Task.hpp
app/src/main/jni/ParallelUS/runtime/src/parallelus/: Buffer.cpp  NetworkManager.cpp  Program.cpp  Runtime.cpp  SchedulerFCFS.cpp  SchedulerPAMS.cpp  Task.cpp  Worker.hpp
app/src/main/jni/ParallelUS/runtime/src/parallelus/util/: error.h
app/src/main/jni/nbproject/: configurations.xml  project.xml
app/src/main/jni/nbproject/private/: configurations.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
evaluation/: 1000_1000_1000.txt  1000_1000_16000.txt  1000_1000_400.txt  1000_1000_4000.txt  1000_1000_5000.txt  1000_1000_8000.txt  100_100_1.txt  100_100_10.txt  500_500_1.txt  500_500_10.txt  500_500_100.txt  500_500_400.txt  500_500_50.txt  evaluation.ods  expressao_remove_inutilidades.txt  grafico.py
evaluation/testes/: 1000_1000_1000.txt  1000_1000_16000.txt  500_500_50.txt  teste.xcf  teste1000.xcf
evaluation/testes/outros/: 1000_1000_4000.txt  100_100_1.txt  500_500_1.txt
evaluation/testes/tasks/blackAndWhite/: 1000_1000.txt  100_100.txt  1500_1500.txt  2000_2000.txt  500_500.txt  grafico.html
evaluation/testes/tasks/fes/: 100fe.txt  100femedia.txt  10fe.txt  1fe.txt  consideracoes.txt  generator.py
evaluation/testes/tasks/fes/100fe/media/: 100.txt
evaluation/testes/tasks/fes/100fe/xpesada/: 1.txt  100.txt  1000.txt
evaluation/testes/tasks/fes/10fe/leve/: 100.txt  1000.txt
evaluation/testes/tasks/fes/10fe/media/: 10.txt  100.txt  1000.txt
evaluation/testes/tasks/fes/1feLeve/: 1000.txt  10000.txt
evaluation/testes/tasks/fes/1feMedia/: 1.txt  1000.txt
evaluation/testes/tasks/fes/antigos/: 1fepesadae.txt
mdevices/Clientapp/app/: build.gradle  proguard-rules.pro
mdevices/Clientapp/app/src/main/: AndroidManifest.xml
mdevices/Clientapp/gradle/wrapper/: gradle-wrapper.properties
mdevices/ocr/app/src/main/: .project  AndroidManifest.xml
mdevices/ocr/app/src/main/jni/: Application.mk  CMakeLists.txt  br_edu_ufsj_dcomp_ocr_Controller.cpp
mdevices/ocr/app/src/main/jni/ParallelOCR/include/parallelocr/: Coach.hpp  Image.hpp
mdevices/ocr/app/src/main/jni/ParallelOCR/src/parallelocr/: Image.cpp  Letter.cpp
mdevices/ocr/app/src/main/jni/ParallelUS/runtime/: Android.mk
mdevices/ocr/app/src/main/jni/ParallelUS/runtime/include/parallelus/: NetworkManager.hpp
mdevices/ocr/app/src/main/jni/ParallelUS/runtime/src/parallelus/: Device.cpp  NetWorker.hpp  Network.hpp
mdevices/ocr/evaluation/testes/: teste.xcf
mdevices/ocr/evaluation/testes/outros/: 1000_1000_400.txt  1000_1000_8000.txt  500_500_100.txt  500_500_400.txt  500_500_800.txt
mdevices/ocr/gradle/wrapper/: gradle-wrapper.properties
ocr/: local.properties
ocr/app/src/main/: AndroidManifest.xml
ocr/app/src/main/jni/: Android.mk  br_edu_ufsj_dcomp_ocr_Controller.cpp  br_edu_ufsj_dcomp_ocr_Controller_copy.cpp
ocr/evaluation/testes/outros/: 100_100_10.txt
ocr/evaluation/testes/tasks/fes/: asdf.txt  generator.py  teste.txt
ocrDosOutros/OCR-master/nbproject/: genfiles.properties
ocrDosOutros/neuroocr_src/: NeuroOCR.sln
ocrDosOutros/neuroocr_src/AForge/Math/: Complex.cs  Copyright.txt  FourierTransform.cs  Histogram.cs  HistogramD.cs  Math.csproj  Range.cs  RangeD.cs  Statistics.cs  Tools.cs
ocrDosOutros/neuroocr_src/AForge/NeuralNet/: ActivationFunction.cs  Copyright.txt  Layer.cs  Network.cs  NeuralNet.csproj  Neuron.cs
ocrDosOutros/neuroocr_src/AForge/NeuralNet/Learning/: BackPropagationLearning.cs  ISupervisedLearning.cs
ocrDosOutros/neuroocr_src/NeuroOCR/: GridArray.cs  MainForm.cs  MainForm.resx  NeuroOCR.csproj  PaintBoard.cs  PaintBoard.resx  Receptor.cs  Receptors.cs
odevice/: local.properties
odevice/app/: proguard-rules.pro
odevice/app/src/main/jni/: Android.mk  br_edu_ufsj_dcomp_ocr_Controller.cpp
odevice/app/src/main/jni/ParallelME/runtime/: CMakeLists.txt
odevice/evaluation/testes/outros/: 1000_1000_5000.txt  500_500_10.txt
odevice/evaluation/testes/tasks/blackAndWhite/: 500_500.txt
odevice/evaluation/testes/tasks/fes/: 10fe.txt
(+113 files in other folders)
